# Theodore

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
Contents/: Icosahedron.fmt  terrain_settings.terrain
Contents/model/: budda.mtl
Libraries/include/AL/: openal_version.txt
Resources/: terrain_settings.terrain
Shaders/: ClothFS.glsl  ClothVS.glsl  ComputeShader.glsl  FragmentShader.glsl  GeometryShader.glsl  TessControlShader.glsl  VertexShader.glsl  compute.glsl  fs.glsl  vs.glsl
Shaders/Terrian/: FragmentShader.glsl  TessellationControlShader.glsl  TessellationEvalShader.glsl  VertexShader.glsl
Shaders/cubemap/: cubemap.fs  cubemap.vs  cubemap_fs.glsl  cubemap_vs.glsl
Shaders/debug/: normal.fs  normal.vs  normal_gs.glsl
Shaders/gizmo/: fs.glsl  gizmo.fs  gizmo.vs  gizmo_fs.glsl  sphere.gs  vs.glsl
Shaders/light/: flat.fs  flat_fs.glsl  fs.glsl  phong.fs  phong.vs  quad.fs  quad.vs  shadow.fs  shadow.vs  vs.glsl
Shaders/post-effect/: fs.glsl  vs.glsl
Shaders/skinning/: skinning.vs  vs.glsl
Shaders/sprite/: fs.glsl  sprite.fs  sprite.vs  vs.glsl
Shaders/terrian/: TessellationControlShader.glsl  terrain_te.glsl
Source/: Application.cpp  Application.h  Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  BoneWeight.cpp  BoneWeight.h  Bounds.cpp  Bounds.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Cloth.cpp  Cloth.h  CocoaPlatform.h  CocoaPlatform.mm  Collider.cpp  Collider.h  Color.cpp  Color.h  Component.cpp  Component.h  Constraint.cpp  Constraint.h  Cubemap.cpp  Cubemap.h  CubemapRenderer.cpp  CubemapRenderer.h  DataStream.cpp  DataStream.h  Debug.cpp  Debug.h  Enumeration.h  File.cpp  File.h  FrameBuffer.cpp  FrameBuffer.h  GameObject.cpp  (+124 more)
cmake/: FindWindowsSDK.cmake  RootDir.h.in
res/model/: budda.mtl  tree.stl
sample/01-hello_world/: main.cpp
sample/02-triangle/: main.cpp
sample/03-camera/: main.cpp
sample/04-sprite/: main.cpp
sample/05-font_render/: main.cpp
sample/06-cubemap/: main.cpp
sample/07-mesh_render/: main.cpp
sample/08-transform/: main.cpp
shaders/: ComputeShader.glsl  compute.glsl
shaders/debug/: normal_fs.glsl  normal_vs.glsl
shaders/font/: font_fs.glsl  font_vs.glsl
shaders/light/: quad_vs.glsl  shadow_fs.glsl  shadow_vs.glsl
shaders/post-effect/: post_effect_vs.glsl
shaders/sprite/: sprite_vs.glsl
src/: CMakeLists.txt  SplashScene.h  TheodoreEngine.h  main.cpp
src/Asset/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Font.cpp  Font.h  GlyphInfo.h  MSAATexture2D.cpp  MSAATexture2D.h  Mesh.cpp  Mesh.h  MeshGroup.cpp  MeshGroup.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h  TextureOption.h  Vertex.h  WaveFrontObjMesh.cpp  WaveFrontObjMesh.h
src/Asset/WaveFrontObj/: MeshGroup.h  WaveFrontObjMesh.cpp  WaveFrontObjMesh.h
src/Component/: BoneWeight.cpp  BoneWeight.h  Camera.cpp  Camera.h  Component.cpp  Component.h  CubemapRenderer.cpp  CubemapRenderer.h  FontRenderer.cpp  FontRenderer.h  Gizmo.cpp  Gizmo.h  KeyFrame.cpp  KeyFrame.h  Light.cpp  Light.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h  SkinnedMeshRenderer.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
src/Component/Collider/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h  SphereCollider.cpp  SphereCollider.h
src/Component/Physics/: Physics.cpp  Physics.h  RaycastHit.cpp  RaycastHit.h  RigidBody2D.cpp  RigidBody2D.h
src/Core/: Application.cpp  Application.h  GameObject.cpp  GameObject.h  Message.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h  UniqueId.h
src/Geometry/: Bounds.cpp  Bounds.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h
src/Graphics/: Enumeration.h  FrameBuffer.cpp  FrameBuffer.h  GPUBuffer.cpp  GPUBuffer.h  Graphics.cpp  Graphics.h  InputStream.cpp  InputStream.h  RenderBuffer.cpp  RenderBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Helper/: Bitmap.h  DataStream.cpp  DataStream.h  Debug.cpp  Debug.h  File.cpp  File.h  ShapeGenerator.cpp  ShapeGenerator.h  StringUtil.cpp  StringUtil.h  Utility.h  crc32.h
src/Math/: Color.cpp  Color.h  Math.cpp  Math.h  Mathf.cpp  Mathf.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Rect.cpp  Rect.h  Vector2d.cpp  Vector2d.h  Vector3d.cpp  Vector3d.h  Vector4d.cpp  Vector4d.h
src/Object/: Application.cpp  Application.h  GameObject.cpp  GameObject.h  Message.cpp  Message.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TagManager.cpp  TagManager.h
src/Object/Component/: Camera.cpp  Camera.h  Component.cpp  Component.h  CubemapRenderer.cpp  CubemapRenderer.h  FontRenderer.cpp  FontRenderer.h  Gizmo.cpp  Gizmo.h  Light.cpp  Light.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
src/Object/Component/Collider/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h  SphereCollider.cpp  SphereCollider.h
src/Object/Component/Physics/: Cloth.cpp  Cloth.h  Constraint.cpp  Constraint.h  Particle.cpp  Particle.h  RigidBody2D.cpp  RigidBody2D.h
src/Object/Component/sub/: BoneWeight.cpp  BoneWeight.h  KeyFrame.cpp  KeyFrame.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Physics.cpp  Physics.h  ShadowInfo.cpp  ShadowInfo.h  ShapeGenerator.cpp  ShapeGenerator.h  Sprite.cpp  Sprite.h
src/Platform/: CocoaPlatform.h  CocoaPlatform.mm  CondiitonalVars.h  Input.cpp  Input.h  KeyCode.h  LinuxPlatform.cpp  LinuxPlatform.h  Platform.cpp  Platform.h  Time.cpp  Time.h  WindowsPlatform.cpp  WindowsPlatform.h  os_types.h
src/Shaders/: FragmentShader.glsl  TessEvalShader.glsl  vs.glsl
src/Shaders/light/: quad.fs
src/Shaders/sprite/: sprite.fs
src/Shaders/terrian/: FragmentShader.glsl  VertexShader.glsl
test/: Color_test.cpp  StringUtil_test.cpp  fizzbuzz_test.cpp  test1.cpp  test_main.cpp
(+5 files in other folders)
